# computergraphics

./: .gitignore  CMakeLists.txt
include/: game.h  geometry.h  math.h  sdl2_renderer.h  timer.h
src/geometry/: geometry.cc  geometry.tcc
src/math/: math.cc  math.tcc
src/renderer/: sdl2_renderer.cc
src/timer/: timer.cc
task_1/: .clang-format
task_1/include/: game.h  physics.h  sdl2_renderer.h  sound.h
task_1/index/: math.cc.D17BE01ABB0B845D.idx  math.h.165133962FA469D7.idx  math.tcc.8C724AE3388DC938.idx  math_test.cc.09D3A06D874791EE.idx
task_1/src/game/: game.cc
task_1/src/math/: math.cc
task_1/tests/: math_test.cc
task_2/: CMakeLists.txt
task_2/include/: camera.h  geometric_object.h  geometry.h  hittable.h  light.h  math.h  ray.h  scene.h  shader.h  viewport.h  window.h  world.h
task_2/src/math/: math.cc  math.tcc
task_2/src/raytracer/: camera.cc  light.cc  ray.cc  raytracer.cc  scene.cc  shader.cc  viewport.cc  window.cc
tests/: CMakeLists.txt  geometry_test.cc  math_test.cc
